frontend/tests/regression/good/polarity.gr
secondOrder : forall (a : Type, b : Type)
   . (a |0| -> b) -> a |1| -> b
secondOrder f xb = let |x| = xb in f |x|

secondOrderAlt : forall (a : Type, b : Type)
   . (a |0| -> b) -> a |1| -> b
secondOrderAlt f |x| = f |x|

thirdOrder : ((Int |2| -> Int) -> Int) -> Int
thirdOrder f =
        f (\(yb : Int |1|) -> let |y| : Int |1| = yb in y)
