frontend/tests/regression/illtyped/polarityHO.gr
thirdOrder : ((Int |0| -> Int) -> Int) -> Int
thirdOrder f =
        f (\(yb : Int |1|) -> let |y| : Int = yb in y)
